# daq

./: CMakeLists.txt  Dockerfile_gui  Dockerfile_main  Dockerfile_master  Electronic_parameter.json  Electronic_parameter_CRRC.json  README.md  README.txt  commands.txt  commands1.txt  daq.sif.def  main.py  master.py  setup.sh  threshold_config.py
.devcontainer/: devcontainer.json
daq/: CMakeLists.txt  Data2ROOT.py  Handler4CMD.py  Handler4Status.py  Handlers.py  SiTCP.py  SiTCPCMD.py  SiTCPData.py  Status.py  Utils.py  WebSocket.py  WebSocket4GUI.py  __init__.py  docker-compose.yml
daq/gui/: index.html
daq/output/: thresholdes.json
daq/output/buffers1/: parse.py
daq/output/buffers2/: buffer2.out
daq/qa/: index.html
daq/qa/js/: index.js
daq/src/AutoSocket/: AutoSocket.cpp
daq/src/BufferTP/: CMakeLists.txt
daq/src/DAQHandler/: CMakeLists.txt  DAQHandler.cpp
daq/src/DataProcessor/: CMakeLists.txt  DataProcessor.cpp  DataProcessor.h
daq/src/Event/: CMakeLists.txt  Event.cpp  Event.h  Pad.cpp
daq/src/EventConverter/: CMakeLists.txt
daq/src/EventQA/: CMakeLists.txt  EventQA.h  main.cpp
daq/src/GUISocket/: Utils.py
daq/src/LockFreeQueue/: CMakeLists.txt
daq/src/OnlineQA/: OnlineQA.cpp  OnlineQA.h
daq/src/PacketDecoder/: CMakeLists.txt  PacketDecoder.cpp
daq/src/ParameterGenerator/: ParameterGenerator.cpp  ParameterGenerator.h
daq/src/RawEvent/: Channel.cpp  Channel.h  RawEvent.h
daq/src/SiTCP/: CMakeLists.txt  SiTCP.cpp  SiTCP.h  main.cpp
daq/src/TMessageBufferTP/: TMessageBufferTP.h
daq/src/WebSocketServer/: CMakeLists.txt  WebSocketServer.cpp  WebSocketServer.h
gui/: index.html
gui/js/: index.js
gui/slowcontrol/: index.html
gui/slowcontrol/js/: chart.umd.js.map  index.js
output/: eventParameters.json
output/buffers1/: buffer1.out
output/buffers2/: parse.py
qa/: index.html
qa/css/: gui.css
qa/js/: index.js
slow_control/: slowcontrol.py
src/: CMakeLists.txt  main.cpp
src/AutoSocket/: AutoSocket.cpp  AutoSocket.h  CMakeLists.txt  Linkdef.h  Makefile  cmake_install.cmake
src/BufferTP/: BufferTP.h
src/DAQHandler/: CMakeLists.txt  DAQHandler.h  Makefile  cmake_install.cmake
src/DataProcessor/: CMakeLists.txt  DataProcessor.cpp  DataProcessor.h  Linkdef.h  Makefile  cmake_install.cmake  main.cpp
src/Event/: CMakeLists.txt  Event.cpp  Event.h  Linkdef.h  Makefile  Pad.cpp  Pad.h  cmake_install.cmake  module.modulemap
src/EventConverter/: CMakeLists.txt  EventConverter.cpp  EventConverter.h  Linkdef.h  Makefile  cmake_install.cmake
src/EventMaker/: CMakeLists.txt  EventMaker.cpp  EventMaker.h  Linkdef.h  main.py
src/EventQA/: CMakeLists.txt  EventQA.cpp  EventQA.h  Linkdef.h  Makefile  cmake_install.cmake  main.cpp
src/EventQA.backup/: CMakeLists.txt  EventQA.cpp  EventQA.h  main.py
src/GUISocket/: Utils.py  WebSocket.py  __init__.py
src/LockFreeQueue/: LockFreeQueue.h
src/OnlineQA/: CMakeLists.txt  OnlineQA.cpp  OnlineQA.h  main.cpp
src/PacketDecoder/: CMakeLists.txt  Linkdef.h  Makefile  PacketDecoder.cpp  PacketDecoder.h  cmake_install.cmake
src/ParameterGenerator/: CMakeLists.txt  Linkdef.h  Makefile  ParameterGenerator.cpp  ParameterGenerator.h  cmake_install.cmake  main.py
src/PySiTCP/: SiTCP.py
src/RawDataProcessor/: CMakeLists.txt  Linkdef.h  RawDataProcessor.cpp  RawDataProcessor.h  main.py
src/RawEvent/: CMakeLists.txt  Channel.cpp  Channel.h  Linkdef.h  Makefile  RawEvent.cpp  RawEvent.h  cmake_install.cmake
src/RawEventProcessor/: CMakeLists.txt  Linkdef.h  RawEventProcessor.cpp  RawEventProcessor.h  eventSetting.json  main.py
src/SiTCP/: CMakeLists.txt  Linkdef.h  Makefile  SiTCP.cpp  SiTCP.h  cmake_install.cmake  main.cpp  main.py
src/TMessageBuffer/: CMakeLists.txt  Linkdef.h  Makefile  TMessageBuffer.cpp  TMessageBuffer.h  cmake_install.cmake
src/TMessageBufferTP/: CMakeLists.txt  TMessageBufferTP.h
src/TMessageSocket/: CMakeLists.txt  Linkdef.h  Makefile  TMessageSocket.cpp  TMessageSocket.h  cmake_install.cmake
src/WebSocketServer/: CMakeLists.txt  Makefile  cmake_install.cmake
src/main/: CMakeLists.txt  main.cpp  main.cpp~  test.C
text_description/: 0_text_library
